--- a/notebooks/1.0-download-data.ipynb
+++ b/notebooks/1.0-download-data.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -106,12 +106,12 @@
       "[*********************100%***********************]  1 of 1 completed\n",
       "\n",
       "1 Failed download:\n",
-      "['^IXIC']: YFPricesMissingError('$%ticker%: possibly delisted; no price data found  (1d 2024-09-01 00:00:00 -> 2024-09-02 00:00:00)')\n"
+      "['AMZN']: YFPricesMissingError('$%ticker%: possibly delisted; no price data found  (1d 2024-09-01 00:00:00 -> 2024-09-02 00:00:00)')\n"
      ]
     }
    ],
    "source": [
-    "df = download_data_period('^IXIC', \"2024-09-01\", \"2024-09-02\")"
+    "df = download_data_period('AAPL', \"2024-09-01\", \"2024-09-02\")"
    ]
   },
   {
