--- a/notebooks/1.0-download-data.ipynb
+++ b/notebooks/1.0-download-data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,30 +96,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "\n",
-      "1 Failed download:\n",
-      "['AMZN']: YFPricesMissingError('$%ticker%: possibly delisted; no price data found  (1d 2024-09-01 00:00:00 -> 2024-09-02 00:00:00)')\n"
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     }
    ],
    "source": [
-    "df = download_data_period('AAPL', \"2024-09-01\", \"2024-09-02\")"
+    "df = download_data_period('AAPL', \"2024-08-01\", \"2024-09-01\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-08-01</td>\n",
+       "      <td>218.360001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-08-02</td>\n",
+       "      <td>219.860001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-08-05</td>\n",
+       "      <td>209.270004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-08-06</td>\n",
+       "      <td>207.229996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-08-07</td>\n",
+       "      <td>209.820007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-08-08</td>\n",
+       "      <td>213.309998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024-08-09</td>\n",
+       "      <td>216.240005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2024-08-12</td>\n",
+       "      <td>217.529999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2024-08-13</td>\n",
+       "      <td>221.270004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2024-08-14</td>\n",
+       "      <td>221.720001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2024-08-15</td>\n",
+       "      <td>224.720001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2024-08-16</td>\n",
+       "      <td>226.050003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024-08-19</td>\n",
+       "      <td>225.889999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2024-08-20</td>\n",
+       "      <td>226.509995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2024-08-21</td>\n",
+       "      <td>226.399994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2024-08-22</td>\n",
+       "      <td>224.529999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024-08-23</td>\n",
+       "      <td>226.839996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024-08-26</td>\n",
+       "      <td>227.179993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024-08-27</td>\n",
+       "      <td>228.029999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024-08-28</td>\n",
+       "      <td>226.490005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2024-08-29</td>\n",
+       "      <td>229.789993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024-08-30</td>\n",
+       "      <td>229.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date       Close\n",
+       "0  2024-08-01  218.360001\n",
+       "1  2024-08-02  219.860001\n",
+       "2  2024-08-05  209.270004\n",
+       "3  2024-08-06  207.229996\n",
+       "4  2024-08-07  209.820007\n",
+       "5  2024-08-08  213.309998\n",
+       "6  2024-08-09  216.240005\n",
+       "7  2024-08-12  217.529999\n",
+       "8  2024-08-13  221.270004\n",
+       "9  2024-08-14  221.720001\n",
+       "10 2024-08-15  224.720001\n",
+       "11 2024-08-16  226.050003\n",
+       "12 2024-08-19  225.889999\n",
+       "13 2024-08-20  226.509995\n",
+       "14 2024-08-21  226.399994\n",
+       "15 2024-08-22  224.529999\n",
+       "16 2024-08-23  226.839996\n",
+       "17 2024-08-26  227.179993\n",
+       "18 2024-08-27  228.029999\n",
+       "19 2024-08-28  226.490005\n",
+       "20 2024-08-29  229.789993\n",
+       "21 2024-08-30  229.000000"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
