--- a/notebooks/1.0-download-data.ipynb
+++ b/notebooks/1.0-download-data.ipynb
@@ -23,14 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "\n",
-    "import pandas as pd"
+    "import sys"
    ]
   },
   {
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -61,11 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "sys.path.append('../src/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_data = \"../data/01_raw/\""
    ]
   },
   {
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +102,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.1 NASDAQ"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbol = '^IXIC'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -105,17 +128,7 @@
      "text": [
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
-    }
-   ],
-   "source": [
-    "df = download_data_period('AAPL', \"2024-08-01\", \"2024-09-01\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -144,151 +157,307 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024-08-01</td>\n",
-       "      <td>218.360001</td>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>14765.940430</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024-08-02</td>\n",
-       "      <td>219.860001</td>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>14592.209961</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024-08-05</td>\n",
-       "      <td>209.270004</td>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>14510.299805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024-08-06</td>\n",
-       "      <td>207.229996</td>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>14524.070312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024-08-07</td>\n",
-       "      <td>209.820007</td>\n",
+       "      <td>2024-01-08</td>\n",
+       "      <td>14843.769531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024-08-08</td>\n",
-       "      <td>213.309998</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2024-08-09</td>\n",
-       "      <td>216.240005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2024-08-12</td>\n",
-       "      <td>217.529999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2024-08-13</td>\n",
-       "      <td>221.270004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2024-08-14</td>\n",
-       "      <td>221.720001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2024-08-15</td>\n",
-       "      <td>224.720001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2024-08-16</td>\n",
-       "      <td>226.050003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2024-08-19</td>\n",
-       "      <td>225.889999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2024-08-20</td>\n",
-       "      <td>226.509995</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2024-08-21</td>\n",
-       "      <td>226.399994</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2024-08-22</td>\n",
-       "      <td>224.529999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2024-08-23</td>\n",
-       "      <td>226.839996</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>163</th>\n",
        "      <td>2024-08-26</td>\n",
-       "      <td>227.179993</td>\n",
+       "      <td>17725.769531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>164</th>\n",
        "      <td>2024-08-27</td>\n",
-       "      <td>228.029999</td>\n",
+       "      <td>17754.820312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>165</th>\n",
        "      <td>2024-08-28</td>\n",
-       "      <td>226.490005</td>\n",
+       "      <td>17556.029297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>166</th>\n",
        "      <td>2024-08-29</td>\n",
-       "      <td>229.789993</td>\n",
+       "      <td>17516.429688</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>167</th>\n",
        "      <td>2024-08-30</td>\n",
-       "      <td>229.000000</td>\n",
+       "      <td>17713.619141</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>168 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date         Close\n",
+       "0   2024-01-02  14765.940430\n",
+       "1   2024-01-03  14592.209961\n",
+       "2   2024-01-04  14510.299805\n",
+       "3   2024-01-05  14524.070312\n",
+       "4   2024-01-08  14843.769531\n",
+       "..         ...           ...\n",
+       "163 2024-08-26  17725.769531\n",
+       "164 2024-08-27  17754.820312\n",
+       "165 2024-08-28  17556.029297\n",
+       "166 2024-08-29  17516.429688\n",
+       "167 2024-08-30  17713.619141\n",
+       "\n",
+       "[168 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = download_data_period(symbol, \"2024-01-01\", \"2024-09-01\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-09-03</td>\n",
+       "      <td>17136.298828</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date       Close\n",
-       "0  2024-08-01  218.360001\n",
-       "1  2024-08-02  219.860001\n",
-       "2  2024-08-05  209.270004\n",
-       "3  2024-08-06  207.229996\n",
-       "4  2024-08-07  209.820007\n",
-       "5  2024-08-08  213.309998\n",
-       "6  2024-08-09  216.240005\n",
-       "7  2024-08-12  217.529999\n",
-       "8  2024-08-13  221.270004\n",
-       "9  2024-08-14  221.720001\n",
-       "10 2024-08-15  224.720001\n",
-       "11 2024-08-16  226.050003\n",
-       "12 2024-08-19  225.889999\n",
-       "13 2024-08-20  226.509995\n",
-       "14 2024-08-21  226.399994\n",
-       "15 2024-08-22  224.529999\n",
-       "16 2024-08-23  226.839996\n",
-       "17 2024-08-26  227.179993\n",
-       "18 2024-08-27  228.029999\n",
-       "19 2024-08-28  226.490005\n",
-       "20 2024-08-29  229.789993\n",
-       "21 2024-08-30  229.000000"
+       "        Date         Close\n",
+       "0 2024-09-03  17136.298828"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "download_data_today(symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_parquet(os.path.join(path_data, f'{symbol}.parquet'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Bitcoin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>44167.332031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>44957.968750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>42848.175781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>44179.921875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>44162.691406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>2024-08-27</td>\n",
+       "      <td>59504.132812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>2024-08-28</td>\n",
+       "      <td>59027.625000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>2024-08-29</td>\n",
+       "      <td>59388.179688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>2024-08-30</td>\n",
+       "      <td>59119.476562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>2024-08-31</td>\n",
+       "      <td>58969.898438</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date         Close\n",
+       "0   2024-01-01  44167.332031\n",
+       "1   2024-01-02  44957.968750\n",
+       "2   2024-01-03  42848.175781\n",
+       "3   2024-01-04  44179.921875\n",
+       "4   2024-01-05  44162.691406\n",
+       "..         ...           ...\n",
+       "239 2024-08-27  59504.132812\n",
+       "240 2024-08-28  59027.625000\n",
+       "241 2024-08-29  59388.179688\n",
+       "242 2024-08-30  59119.476562\n",
+       "243 2024-08-31  58969.898438\n",
+       "\n",
+       "[244 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = download_data_period('BTC-USD', \"2024-01-01\", \"2024-09-01\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_parquet(os.path.join(path_data, 'BTC-USD.parquet'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.3 Google"
    ]
   },
   {
@@ -297,6 +466,156 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4 Apple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbol = 'AAPL'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>185.639999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>184.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>181.910004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>181.179993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-01-08</td>\n",
+       "      <td>185.559998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>2024-08-26</td>\n",
+       "      <td>227.179993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>2024-08-27</td>\n",
+       "      <td>228.029999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>2024-08-28</td>\n",
+       "      <td>226.490005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>2024-08-29</td>\n",
+       "      <td>229.789993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>2024-08-30</td>\n",
+       "      <td>229.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>168 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date       Close\n",
+       "0   2024-01-02  185.639999\n",
+       "1   2024-01-03  184.250000\n",
+       "2   2024-01-04  181.910004\n",
+       "3   2024-01-05  181.179993\n",
+       "4   2024-01-08  185.559998\n",
+       "..         ...         ...\n",
+       "163 2024-08-26  227.179993\n",
+       "164 2024-08-27  228.029999\n",
+       "165 2024-08-28  226.490005\n",
+       "166 2024-08-29  229.789993\n",
+       "167 2024-08-30  229.000000\n",
+       "\n",
+       "[168 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = download_data_period(symbol, \"2024-01-01\", \"2024-09-01\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_parquet(os.path.join(path_data, f'{symbol}.parquet'))"
+   ]
   }
  ],
  "metadata": {
